; ModuleID = '/home/carl/AnghaBench/freebsd/share/examples/ppi/extr_ppilcd.c_hd44780_input.c'
source_filename = "/home/carl/AnghaBench/freebsd/share/examples/ppi/extr_ppilcd.c_hd44780_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HD_READ = common dso_local global i32 0, align 4
@STROBE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"0x%02x -> %s\00", align 1
@HD_COMMAND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"cmd \00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @hd44780_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hd44780_input(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @HD_READ, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @STROBE, align 4
  %8 = or i32 %6, %7
  %9 = call i32 @hd_sctrl(i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @HD_READ, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @hd_sctrl(i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @hd_gdata(i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = load i32, i32* @HD_READ, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @STROBE, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @hd_sctrl(i32 %20)
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @HD_COMMAND, align 4
  %25 = icmp eq i32 %23, %24
  %26 = zext i1 %25 to i64
  %27 = select i1 %25, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0)
  %28 = call i32 @debug(i32 3, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %22, i8* %27)
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @hd_sctrl(i32) #1

declare dso_local i32 @hd_gdata(i32) #1

declare dso_local i32 @debug(i32, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
